deployment/base/delivery-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: delivery-service
spec:
  selector:
    app: delivery-service
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: service
    - protocol: TCP
      port: 8888
      targetPort: 8888
      name: collector
