deployment/base/delivery-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: delivery-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: delivery.ok-cluster.azure.cloud.openknowledge.services
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: delivery-service
                port:
                  number: 8080
